<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="status_update">Status Update</string>
    <string name="button_update">Update</string>
    <string name="hint">Please enter your status update</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="refresh_service">Refresh Service</string>
    <string name="username">Username</string>
    <string name="summary_username">Enter your login username</string>
    <string name="password">Password</string>
    <string name="summary_password">Please enter password</string>
    <string name="server">Enter Your Server API</string>
    <string name="prefs">Preferences</string>
    <string name="summary_delay">How frequently to check for updates</string>
    <string name="delay">Delay</string>
    <string name="title_timeline">TimeLine</string>
    <string-array name="delayNames">
        <item>Every 10 seconds</item>
        <item >Every 15 Minutes</item>
        <item >Every half hour</item>
        <item>Every  hour</item>
        <item>Every  half day</item>
        <item>Once a day</item>
        <item>Never</item>
    </string-array>

    <string-array name="delayValues">
        <item>10000</item>
        <item >900000</item>
        <item >1800000</item>
        <item>3600000</item>
        <item>43200000</item>
        <item>86400000</item>
        <item>-1</item>
    </string-array>
    <string name="timeline">Timeline</string>
</resources>
