<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".StatusActivity"
    android:weightSum="1"
    android:background="@android:color/holo_blue_bright">

    <TextView
        android:text="@string/status_update"
        style="@style/title_style" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_update"
        android:onClick="onClick" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText_status"
        android:layout_weight="1"
        android:hint="@string/hint"
        android:background="@color/myclore" />
</LinearLayout>
